force-app/main/default/objects/IT_Ticket__c/IT_Ticket__c.object-meta.xml
<CustomObject>
    <label>IT Ticket</label>
    <nameField>
        <displayFormat>IT-{0000}</displayFormat>
        <label>IT Ticket ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IT Ticket</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>