force-app/main/default/objects/IT_Ticket__c/fields/Assigned_Agent__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>IT Support Agent in charge</description>
    <label>Assigned Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Assigned Agent</relationshipLabel>
    <relationshipName>Assigned_Agent</relationshipName>
    <type>Lookup</type>
</CustomField>