force-app/main/default/objects/IT_Ticket__c/fields/Comment_Count__c.field-meta.xml
<CustomField>
    <fullName>Comment_Count__c</fullName>
    <description>Đếm số Comment liên quan</description>
    <label>Comment Count</label>
    <summaryForeignKey>Ticket_Comment__c.Ticket__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>