force-app/main/default/objects/IT_Ticket__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>SLA Processing Deadline (Automated)</description>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>