force-app/main/default/objects/IT_Ticket__c/fields/Is_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Is_Overdue__c</fullName>
    <formula>(TODAY() &gt; DATEVALUE(Due_Date__c)) &amp;&amp; (TEXT(Status__c) &lt;&gt; &apos;Closed&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Overdue</label>
    <type>Checkbox</type>
</CustomField>