force-app/main/default/objects/IT_Ticket__c/fields/Related_Asset__c.field-meta.xml
<CustomField>
    <fullName>Related_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Asset</description>
    <label>Related Asset</label>
    <referenceTo>Company_Asset__c</referenceTo>
    <relationshipLabel>IT Ticket</relationshipLabel>
    <relationshipName>IT_Ticket</relationshipName>
    <type>Lookup</type>
</CustomField>