force-app/main/default/objects/IT_Ticket__c/fields/Resolved_Date__c.field-meta.xml
<CustomField>
    <fullName>Resolved_Date__c</fullName>
    <description>Time of Resolution</description>
    <label>Resolved Date</label>
    <type>DateTime</type>
</CustomField>