force-app/main/default/objects/IT_Ticket__c/fields/Satisfaction_Rating__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_Rating__c</fullName>
    <description>Staff evaluation after ticket closure</description>
    <label>Satisfaction Rating</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>