force-app/main/default/objects/IT_Ticket__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Request Sender</description>
    <label>Submitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>IT_Ticket</relationshipName>
    <type>Lookup</type>
</CustomField>