force-app/main/default/objects/IT_Ticket__c/validationRules/Escalation_Reason_Default.validationRule-meta.xml
<ValidationRule>
    <fullName>Escalation_Reason_Default</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISPICKVAL(Status__c, &apos;Escalated&apos;)), NOT(ISBLANK(Escalation_Reason__c)))</errorConditionFormula>
    <errorMessage>Please do not enter an escalation reason when the status is not escalated.</errorMessage>
</ValidationRule>