force-app/main/default/objects/IT_Ticket__c/validationRules/Escalation_Reason_Required_When_Escalate.validationRule-meta.xml
<ValidationRule>
    <fullName>Escalation_Reason_Required_When_Escalate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &apos;Escalated&apos;), ISBLANK(Escalation_Reason__c))</errorConditionFormula>
    <errorMessage>Please enter the escalation reason before changing the status to Escalated.</errorMessage>
</ValidationRule>